# cosmogridv11

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  README2.md  setup.cfg  setup.py  tox.ini
config/: config_hires.yaml  config_stage3.yaml  config_v11.yaml  config_v11desy3.yaml  config_v11test.yaml
cosmogridv11/: __init__.py  cli.py  copy_guardian.py  filenames.py  run_haloops.py  utils_arrays.py  utils_config.py  utils_cosmogrid.py  utils_healpix.py  utils_io.py  utils_logging.py  utils_maps.py  utils_projection.py  utils_redshift.py  utils_shell_permutation.py  utils_shells.py
cosmogridv11/apps/: run_baryonification.py  run_create_permutation_table.py  run_create_probe_kernels.py  run_features.py  run_format_converter.py  run_glass.py  run_haloops.py  run_paramtables.py  run_probemaps.py  run_probemaps_euclid.py
cosmogridv11/baryonification/: __init__.py  constants.py  cosmo.py  halo_utils.py  halo_utils_prep.py  halocone.py  params.py  profiles.py  utils.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
envs/: env_euclid.yaml
notebooks/: demo_euclid.ipynb
pipeline/: pipe.yaml  pipe_euclidRR2.yaml  pipe_v11.yaml  pipe_v11test.yaml
resources/redshift_distributions/: NZ_KiDs_meanDIR_0p1_0p3.txt  NZ_KiDs_meanDIR_0p3_0p5.txt  NZ_KiDs_meanDIR_0p5_0p7.txt  NZ_KiDs_meanDIR_0p7_0p9.txt  NZ_KiDs_meanDIR_total.txt  desy3_nz_maglim_bin3.txt  desy3_nz_maglim_bin4.txt  desy3_nz_maglim_bin5.txt  desy3_nz_maglim_bin6.txt  desy3_nz_source_bin1.txt  (+23 more)
tests/: __init__.py  test_cosmogridv11.py
(+17 files in other folders)
