[metadata]
name = cosmogridv11
version = attr: cosmogridv11.__version__
description = Codes for CosmoGridV1.1 simulations.
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
author = Tomasz Kacprzak
author_email = tomasz.kacprzak@psi.ch
url = https://github.com/tomaszkacprzak/cosmogridv11
license = GNU General Public License v3
keywords = cosmogridv11
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =

[options.packages.find]
include = cosmogridv11, cosmogridv11.*

[options.entry_points]
console_scripts =
    cosmogridv11 = cosmogridv11.cli:main

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:cosmogridv11/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
